Good progress. IDEA Integration near complete. Need to test using the kotlin dsl gradle meta testing later, but first clean it up, strip out the POC plugins, and maintain the skelton for the common langauge plugin that we have already needed to implement very basic functionality for so far